# med-stu

./: .dockerignore  .env.example  .gitignore  AI_VIRTUAL_PATIENT_SIMULATOR_README.md  Dockerfile  pyproject.toml
.specify/: feature.json  integration.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/app/: __init__.py  case_store.py  config.py  main.py  models.py  services.py
backend/data/cases/: abdominal_pain_001.json  chest_pain_001.json  diabetes_followup_001.json  migraine_001.json  uri_001.json
backend/tests/: test_consultations.py
docs/: VAANI_BYOL_MVP_RUNBOOK.md  roadmap.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: run-backend.sh  run-frontend.sh
specs/001-local-vaani-mvp/: data-model.md  demo-script.md  plan.md  spec.md  tasks.md
specs/001-local-vaani-mvp/checklists/: requirements.md
specs/001-local-vaani-mvp/contracts/: http-api.md
