[project]
name = "ai-virtual-patient-simulator"
version = "0.1.0"
description = "Educational virtual patient simulator MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = ["pytest>=8.3,<9"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
